ecmascript/parser/tests/test262-error-references/fail/03d13b6c40f6aaea.js.stderr
error: assignment property is invalid syntax
 --> $DIR/tests/test262-parser/fail/03d13b6c40f6aaea.js:1:3
  |
1 | [{a=0},...0]
  |   ^^^

